# ajbm-skills

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  design-styles-playground-fixed.html  design-styles-playground.html  interview-log-skill-distiller.md  pyproject.toml  ruff.toml
.agents/tasks/: prd-langfuse-skill.json
.beads/: issues.jsonl
.claude-plugin/: marketplace.json  plugin.json
.claude/hooks/: debug_payload_log.jsonl
.github/: copilot-instructions.md
.ralph/: progress.md
.ralph/.tmp/: prompt-20260120-150312-40785-1.md  prompt-20260120-161100-59083-1.md  prompt-20260120-161100-59083-10.md  prompt-20260120-161100-59083-11.md  prompt-20260120-161100-59083-12.md  prompt-20260120-161100-59083-13.md  prompt-20260120-161100-59083-14.md  prompt-20260120-161100-59083-15.md  prompt-20260120-161100-59083-16.md  prompt-20260120-161100-59083-17.md  prompt-20260120-161100-59083-18.md  prompt-20260120-161100-59083-19.md  prompt-20260120-161100-59083-2.md  prompt-20260120-161100-59083-20.md  prompt-20260120-161100-59083-21.md  prompt-20260120-161100-59083-22.md  prompt-20260120-161100-59083-3.md  prompt-20260120-161100-59083-4.md  prompt-20260120-161100-59083-5.md  prompt-20260120-161100-59083-6.md  prompt-20260120-161100-59083-7.md  prompt-20260120-161100-59083-8.md  prompt-20260120-161100-59083-9.md  (+33 more)
Plans/: crispy-shimmying-sunset.md
docs/: anthropic-skills-best-practices.md
research/: cursor-windsurf-rules-patterns.md  multi-agent-framework-patterns.md
tests/: __init__.py  test_langfuse_cli.py  test_langfuse_utils.py  test_project_setup.py
(+242 files in other folders)
